--- a/pom.xml
+++ b/pom.xml
@@ -192,7 +192,7 @@
 	</profiles>
 
 	<properties>
-		<revision>1.0.8</revision>
+		<revision>1.0.9-SNAPSHOT</revision>
 		<sdmx.version>2.3.3</sdmx.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -281,11 +281,6 @@
 
 	<dependencyManagement>
 		<dependencies>
-			<dependency>
-				<groupId>org.antlr</groupId>
-				<artifactId>antlr4</artifactId>
-				<version>${antlr4.version}</version>
-			</dependency>
 			<dependency>
 				<groupId>org.antlr</groupId>
 				<artifactId>antlr4-runtime</artifactId>
