--- a/vtl-envs/pom.xml
+++ b/vtl-envs/pom.xml
@@ -57,6 +57,7 @@
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-sql_2.12</artifactId>
 			<scope>provided</scope>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>com.github.lucarosellini.rJava</groupId>
