--- a/vtl-bundles/vtl-integration-tests/pom.xml
+++ b/vtl-bundles/vtl-integration-tests/pom.xml
@@ -55,10 +55,11 @@
 			<artifactId>log4j-over-slf4j</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+		<!-- dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-sql_2.12</artifactId>
-			<scope>test</scope>
+			<scope>provided</scope>
+			<optional>true</optional>
 			<exclusions>
 				<exclusion>
 					<groupId>log4j</groupId>
@@ -69,7 +70,7 @@
 					<artifactId>slf4j-log4j12</artifactId>
 				</exclusion>
 			</exclusions>
-		</dependency>
+		</dependency-->
 	</dependencies>
 
 	<build>
