Updated license headers

--- a/pom.xml
+++ b/pom.xml
@@ -379,6 +379,11 @@
 				<version>${junit.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>org.scala-lang</groupId>
+				<artifactId>scala-reflect</artifactId>
+				<version>${scala.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.apache.spark</groupId>
 				<artifactId>spark-core_${scala.compat.version}</artifactId>
 				<version>${spark.version}</version>
