--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,7 +40,7 @@ jobs:
           - os: windows-latest
           - os: macOS-latest
           - { os: ubuntu-18.04, rspm: "https://packagemanager.rstudio.com/cran/__linux__/bionic/latest" }
-        r: [ 3.6.3, release ]
+        r: [ release ]
         java: [ 8, 11 ]
 
     env:
@@ -51,12 +51,12 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: Setup Java ${{ matrix.java }}
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v2
       with:
         java-version: ${{ matrix.java }}
     
     - name: Setup R
-      uses: r-lib/actions/setup-r@v1
+      uses: r-lib/actions/setup-r@v2
       with:
         r-version: ${{ matrix.r }}
     
@@ -92,7 +92,7 @@ jobs:
     
     - name: Restore Java ${{ matrix.java }} (Linux)
       if: runner.os == 'Linux'
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v2
       with:
         java-version: ${{ matrix.java }}
     
