--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -54,6 +54,7 @@ jobs:
       uses: actions/setup-java@v2
       with:
         java-version: ${{ matrix.java }}
+        distribution: "temurin"
     
     - name: Setup R
       uses: r-lib/actions/setup-r@v2
@@ -95,6 +96,7 @@ jobs:
       uses: actions/setup-java@v2
       with:
         java-version: ${{ matrix.java }}
+        distribution: "temurin"
     
     - name: Link R to Java (MacOS and Linux)
       if: runner.os != 'Windows'
