--- a/vtl-bundles/vtl-r/RVTL/src/main/resources/R/DESCRIPTION
+++ b/vtl-bundles/vtl-r/RVTL/src/main/resources/R/DESCRIPTION
@@ -6,8 +6,8 @@ Maintainer: Valentino Pinna <valentino.pinna@bancaditalia.it>
 Description: R wrapper for VTL Engine
     This package contains functions and a shiny UI for dealing with the Validation and Transformation Language.
 Depends: R (>= 3.3.0), rJava (>= 0.8-8), R6
-Imports: RJSDMX (>= 2.3-3), igraph, networkD3, shiny, shinydashboard, shinyjs, jdx, xtable, dplyr, sortable, DT
-Suggests: testthat
+Imports: igraph, networkD3, shiny, shinydashboard, shinyjs, xtable, dplyr, sortable, DT
+Suggests: testthat, RJSDMX (>= 2.3-3)
 SystemRequirements: Java (>= 8)
 License: EUPL
 Encoding: UTF-8
