SDMX environment paired with FMR metadata repository

--- a/vtl-bundles/vtl-bundle-deps/pom.xml
+++ b/vtl-bundles/vtl-bundle-deps/pom.xml
@@ -112,6 +112,10 @@
 				</dependency>
 				<dependency>
 					<groupId>it.bancaditalia.oss.vtl</groupId>
+					<artifactId>vtl-sdmxenv</artifactId>
+				</dependency>
+				<dependency>
+					<groupId>it.bancaditalia.oss.vtl</groupId>
 					<artifactId>vtl-confman</artifactId>
 				</dependency>
 			</dependencies>
