--- a/pom.xml
+++ b/pom.xml
@@ -227,9 +227,10 @@
 		<slf4j.version>2.0.7</slf4j.version>
 		<log4j.version>2.20.0</log4j.version>
 		<jetty.version>11.0.15</jetty.version>
-		<junit.version>5.9.3</junit.version>
+		<junit.version>5.10.0</junit.version>
 		<junit-jupiter.version>${junit.version}</junit-jupiter.version>
 		<mockito.version>5.2.0</mockito.version>
+		<mockito-inline.version>${mockito.version}</mockito-inline.version>
 		<build-helper-maven-plugin.version>3.4.0</build-helper-maven-plugin.version>
 		<spring.boot.version>2.7.13</spring.boot.version>
 		<node.version>v10.20.1</node.version>
@@ -423,11 +424,6 @@
 				<version>3.0.16</version>
 			</dependency>
 			<dependency>
-				<groupId>org.junit.jupiter</groupId>
-				<artifactId>junit-jupiter-params</artifactId>
-				<version>${junit.version}</version>
-			</dependency>
-			<dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-core</artifactId>
 				<version>${mockito.version}</version>
@@ -435,7 +431,7 @@
 			<dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-inline</artifactId>
-				<version>${mockito.version}</version>
+				<version>${mockito-inline.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.mockito</groupId>
